@@ -4,6 +4,9 @@ Changelog
 1.0b10 - Unreleased
 ------------------
 
+* Range queries must not be quoted with the new query parser.
+  [witsch]
+
 * Disable socket timeouts during maintenance tasks.
   [witsch]
 
